--- a/src/index.scss
+++ b/src/index.scss
@@ -31,11 +31,13 @@ a {
 a:hover {
     background-color: rgb(0,0,0,0.3);
 }
+.toast-message {
+    background-color: var(--blue-light);    
+}
 .card {
     display: flex;
     flex-direction: column;
-    margin: 10px;
-    // border: 2px solid;
+    padding: 20px;
     a{ 
         padding: 0;
         // .img-container {
@@ -51,9 +53,7 @@ a:hover {
     .rating, .movie-title {
         font-weight: bold;
         display: flex;
-        // justify-content: center;
         align-items: center;
-        // border: 2px solid;
     }
     .rating {
         padding: 5px;
@@ -73,21 +73,74 @@ a:hover {
         display: flex;
         font-size: 0.9rem;
         height: 100%;
-        // border: 2px solid green;
     }
 }
 
 .card-container {
+    margin: 1rem;
     display: grid;
     grid-template-columns: repeat(4, 25%);
 }
 
-#watchlist-btn {
+.nav-btn {
     background-color: var(--orange);
     color: white;
 }
-#watchlist-btn:hover {
+.nav-btn:hover {
     background-color: var(--dark-orange);
+}
+
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: calc(100vh - 6rem);
+    form {
+        padding: 3rem;
+        background-color: var(--blue-light);
+        display: flex;
+        border-radius: 8px;
+        flex-direction: column;
+        gap: 20px;
+        h2 {
+            text-align: center;
+            margin-bottom: 1rem;
+        }
+        button {
+            background-color: var(--orange);
+            outline: none;
+            border: none;
+            width: fit-content;
+            margin: auto;
+            font-size: 1rem;
+            font-weight: bold;
+            padding: 10px;
+            transition: all 0.4s;
+            border-radius: 4px;
+            cursor: pointer;
+            margin: 1rem auto;
+        }
+        button:hover {
+            background-color: var(--dark-orange);
+        }
+        input {
+            font-size: 1rem;
+            border: none;
+            background-color: var(--blue-light);
+            outline: none;
+            border-bottom: 1px solid var(--white);
+            padding: 5px 8px;
+        }
+        input::placeholder {
+            color: rgba(255, 255, 255, 0.555); 
+        }
+        a {
+            background: none;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+    }
 }
 
 
@@ -97,6 +150,23 @@ a:hover {
     padding: 1.5rem;
     display: flex;
     justify-content: space-around;
+    button {
+        background-color: var(--orange);
+        outline: none;
+        border: none;
+        width: fit-content;
+        margin: auto;
+        font-size: 1rem;
+        font-weight: bold;
+        padding: 10px;
+        transition: all 0.4s;
+        border-radius: 4px;
+        cursor: pointer;
+        margin: 1rem auto;
+    }
+    button:hover {
+        background-color: var(--dark-orange);
+    }
     ul {
         display: flex;
         gap: 15px;
@@ -110,33 +180,88 @@ a:hover {
         outline: none;
         color: var(--white);
         width:  20vw;
-        // width: 30%;
     }
 }
 
 .movie-container {
     background-color: var(--blue-light);
     margin: 2rem;
-    // border: 1px solid white;
     gap: 20px;
     padding: 1rem;
     display: flex;
     height: calc(100vh - 6rem);
+    // max-height: 400px;
 }
 
 i {
     margin: 0 5px;
 }
 
+.orange-text {
+    color: var(--orange);
+}
+.empty-container {
+    display: flex;
+    background-color: var(--blue-light);
+    height: 30vw;
+    width: 50vw;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem auto;
+    span {
+        font-size: 1.4rem;
+        color: rgba(255, 255, 255, 0.7);
+    }
+}
 .watchlist-container {
+    width: 50vw;
+    height: fit-content;
     background-color: var(--blue-light);
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    min-height: calc(100vh - 6rem);
-    margin: 2rem;
+    margin: 2rem auto;
+    ul {
+        .list-card {
+            display: flex;
+            gap: 10px;
+            flex-direction: row;
+            padding: 1rem 0;
+            img {
+                height: 100px;
+            }
+            .list-desc {
+                width: 100%;
+                justify-content: space-evenly;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+            }
+            .spans {
+                flex-direction: row;
+                display: flex;
+                gap: 5px;
+            }
+            .removeBtn {
+                cursor: pointer;
+                margin: auto 20px;
+                height: fit-content;
+                padding: 5px;
+                background-color: var(--blue-dark);
+                border: none;
+                outline: none;
+                color: var(--orange);
+                font-weight: bold;
+            }
+        }
+    }
+    h2 {
+        margin-bottom: 1rem;
+    }
+    span {
+        color: rgba(255, 255, 255, 0.7);
+    }
 }
-
 .movie-desc {
     .addBtn {
         background-color: var(--orange);
